--- a/index.html
+++ b/index.html
@@ -182,141 +182,141 @@
                             <div class="col-12 text-center">
                                 <h2 class="text-white mb-4">Programación</h2>
 
-                                    <div class="table-responsive">
-                                        <table class="schedule-table table blue-custom-bg text-white">
-                                            <thead>
-                                                <tr>
-                                                    <th scope="col"></th>
-                                                    <th scope="col">Viernes</th>
-                                                    <th scope="col">Sábado</th>
-                                                    <th scope="col">Domingo</th>
-                                                </tr>
-                                            </thead>
+                                <div class="table-responsive">
+                                    <table class="schedule-table table blue-custom-bg text-white">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col"></th>
+                                                <th scope="col">Viernes</th>
+                                                <th scope="col">Sábado</th>
+                                                <th scope="col">Domingo</th>
+                                            </tr>
+                                        </thead>
 
-                                            <tbody>
-                                                <tr>
-                                                    <th scope="row">CxM</th>
-                                                    <td class="table-background-image-wrap etapa1-background-image">
-                                                        <h3>CxM Nocturna</h3>
+                                        <tbody>
+                                            <tr>
+                                                <th scope="row">CxM</th>
+                                                <td class="table-background-image-wrap etapa1-background-image">
+                                                    <h3>CxM Nocturna</h3>
 
-                                                        <p class="mb-2">12K 700+/700-</p>
+                                                    <p class="mb-2">12K 700+/700-</p>
 
-                                                        <p>20:00</p>
+                                                    <p>20:00</p>
 
-                                                        <div class="section-overlay"></div>
-                                                    </td>
+                                                    <div class="section-overlay"></div>
+                                                </td>
 
-                                                    <td class="table-background-image-wrap etapa2-background-image">
-                                                        <h3>CxM Media</h3>
+                                                <td class="table-background-image-wrap etapa2-background-image">
+                                                    <h3>CxM Media</h3>
 
-                                                        <p class="mb-2">25K 1000+/1000-</p>
+                                                    <p class="mb-2">25K 1000+/1000-</p>
 
-                                                        <p>8:30</p>
+                                                    <p>8:30</p>
 
-                                                        <div class="section-overlay"></div>
-                                                    </td>
+                                                    <div class="section-overlay"></div>
+                                                </td>
 
-                                                    <td class="table-background-image-wrap etapa3-background-image">
-                                                        <h3>CxM Contrarreloj</h3>
+                                                <td class="table-background-image-wrap etapa3-background-image">
+                                                    <h3>CxM Contrarreloj</h3>
 
-                                                        <p class="mb-2">12K 700+/700-</p>
+                                                    <p class="mb-2">12K 700+/700-</p>
 
-                                                        <p>9:30</p>
+                                                    <p>9:30</p>
 
-                                                        <div class="section-overlay"></div>
-                                                    </td>
-                                                </tr>
+                                                    <div class="section-overlay"></div>
+                                                </td>
+                                            </tr>
 
-                                                <tr>
-                                                    <th scope="row">Senderismo</th>
+                                            <tr>
+                                                <th scope="row">Senderismo</th>
 
-                                                    <td style="background-color: #ECC9C7"></td>
+                                                <td style="background-color: #ECC9C7"></td>
 
-                                                    <td class="table-background-image-wrap senderismo-background-image">
-                                                        <h3>Senderismo</h3>
+                                                <td class="table-background-image-wrap senderismo-background-image">
+                                                    <h3>Senderismo</h3>
 
-                                                        <p class="mb-2">10K 350+/350-</p>
+                                                    <p class="mb-2">10K 350+/350-</p>
 
-                                                        <p>8:45</p>
+                                                    <p>8:45</p>
 
-                                                        <div class="section-overlay"></div>
-                                                    </td>
+                                                    <div class="section-overlay"></div>
+                                                </td>
 
-                                                    <td style="background-color: #ECC9C7"></td>
-                                                </tr>
+                                                <td style="background-color: #ECC9C7"></td>
+                                            </tr>
 
-                                                <tr>
-                                                    <th scope="row">Marcha Nórdica</th>
+                                            <tr>
+                                                <th scope="row">Marcha Nórdica</th>
 
-                                                    <td style="background-color: #ECC9C7"></td>
-                                                    <td style="background-color: #ECC9C7"></td>
+                                                <td style="background-color: #ECC9C7"></td>
+                                                <td style="background-color: #ECC9C7"></td>
 
-                                                    <td class="table-background-image-wrap marcha-background-image">
-                                                        <h3>Marcha Nórdica</h3>
+                                                <td class="table-background-image-wrap marcha-background-image">
+                                                    <h3>Marcha Nórdica</h3>
 
-                                                        <p class="mb-2">10K 350+/350-</p>
+                                                    <p class="mb-2">10K 350+/350-</p>
 
-                                                        <p>9:15</p>
+                                                    <p>9:15</p>
 
-                                                        <div class="section-overlay"></div>
-                                                    </td>
-                                                </tr>
+                                                    <div class="section-overlay"></div>
+                                                </td>
+                                            </tr>
 
-                                                <tr>
-                                                    <th scope="row">Actividades Deportivas Infantiles</th>
+                                            <tr>
+                                                <th scope="row">Actividades Deportivas Infantiles</th>
 
-                                                    <td style="background-color: #ECC9C7"></td>
+                                                <td style="background-color: #ECC9C7"></td>
 
-                                                    <td class="table-background-image-wrap infantil-background-image">
-                                                        <h3>Entrenamiento Trail</h3>
-                                                        <p>10:00</p>
-                                                        <h3>Iniciación Orientación</h3>
-                                                        <p>11:30</p>
-                                                        <div class="section-overlay"></div>
-                                                    </td>
+                                                <td class="table-background-image-wrap infantil-background-image">
+                                                    <h3>Entrenamiento Trail</h3>
+                                                    <p>10:00</p>
+                                                    <h3>Iniciación Orientación</h3>
+                                                    <p>11:30</p>
+                                                    <div class="section-overlay"></div>
+                                                </td>
 
-                                                    <td style="background-color: #ECC9C7"></td>
-
-
-                                                </tr>
-
-                                                <tr>
-                                                    <th scope="row">Actividades Lúdicas Infantiles</th>
-                                                    <td style="background-color: #ECC9C7"></td>
-                                                    <td class="table-background-image-wrap ludico-background-image">
-                                                        <h3>Infantil</h3>
-                                                        <p class="mb-2">Rocódromo hinchable | Tiro con Arco infantil</p>
-                                                        <p>18:00</p>
-                                                        <div class="section-overlay"></div>
-                                                    </td>
-                                                    <td style="background-color: #ECC9C7"></td>
-                                                </tr>
-
-                                                <tr>
-                                                    <th scope="row">Actividades Ocio</th>
-
-                                                    <td style="background-color: #ECC9C7"></td>
-
-                                                    <td class="table-background-image-wrap concierto-background-image">
-                                                        <h3>Concierto</h3>
-                                                        <p class="mb-2">Música en directo</p>
-                                                        <p>20:00</p>
-                                                        <div class="section-overlay"></div>
-                                                    </td>
-
-                                                    <td class="table-background-image-wrap clausura-background-image">
-                                                        <h3>Fiesta Clausura</h3>
-                                                        <p>13:30</p>
-                                                        <div class="section-overlay"></div>
-                                                    </td>
+                                                <td style="background-color: #ECC9C7"></td>
 
 
-                                                </tr>
+                                            </tr>
+
+                                            <tr>
+                                                <th scope="row">Actividades Lúdicas Infantiles</th>
+                                                <td style="background-color: #ECC9C7"></td>
+                                                <td class="table-background-image-wrap ludico-background-image">
+                                                    <h3>Infantil</h3>
+                                                    <p class="mb-2">Rocódromo hinchable | Tiro con Arco infantil</p>
+                                                    <p>18:00</p>
+                                                    <div class="section-overlay"></div>
+                                                </td>
+                                                <td style="background-color: #ECC9C7"></td>
+                                            </tr>
+
+                                            <tr>
+                                                <th scope="row">Actividades Ocio</th>
+
+                                                <td style="background-color: #ECC9C7"></td>
+
+                                                <td class="table-background-image-wrap concierto-background-image">
+                                                    <h3>Concierto</h3>
+                                                    <p class="mb-2">Música en directo</p>
+                                                    <p>20:00</p>
+                                                    <div class="section-overlay"></div>
+                                                </td>
+
+                                                <td class="table-background-image-wrap clausura-background-image">
+                                                    <h3>Fiesta Clausura</h3>
+                                                    <p>13:30</p>
+                                                    <div class="section-overlay"></div>
+                                                </td>
 
 
-                                            </tbody>
-                                        </table>
-                                    </div>
+                                            </tr>
+
+
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -628,6 +628,9 @@
                     </div>
                     <div class="col-2">
                         <a href="https://supramar.es/" target="_blank"><img src="./images/supramar-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://elictem.com/" target="_blank"><img src="./images/elictem-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                 </div>
             </div>
