--- a/2023.html
+++ b/2023.html
@@ -439,6 +439,9 @@
                     <div class="col-2">
                         <a href="https://supramar.es/" target="_blank"><img src="./images/supramar-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
+                    <div class="col-2">
+                        <a href="https://elictem.com/" target="_blank"><img src="./images/elictem-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
             <div class="row">
