--- a/blog.html
+++ b/blog.html
@@ -265,6 +265,9 @@
                     <div class="col-2">
                         <a href="https://supramar.es/" target="_blank"><img src="./images/supramar-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
+                    <div class="col-2">
+                        <a href="https://elictem.com/" target="_blank"><img src="./images/elictem-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -339,7 +342,6 @@
             </div>
         </div>
     </footer>
-
     <!--
 
     T e m p l a t e M o
