--- a/cordoba-la-llana.html
+++ b/cordoba-la-llana.html
@@ -145,6 +145,7 @@
         </section>
     </main>
 
+    <!-- FOOTER -->
     <footer class="site-footer blue-custom-bg">
         <div class="container">
 
@@ -277,6 +278,9 @@
                     <div class="col-2">
                         <a href="https://supramar.es/" target="_blank"><img src="./images/supramar-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
+                    <div class="col-2">
+                        <a href="https://elictem.com/" target="_blank"><img src="./images/elictem-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -351,7 +355,6 @@
             </div>
         </div>
     </footer>
-
     <!--
 
     T e m p l a t e M o
