--- a/presentacion.html
+++ b/presentacion.html
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                 </div>
-                </div>
+            </div>
         </section>
     </main>
 
@@ -251,6 +251,9 @@
                     </div>
                     <div class="col-2">
                         <a href="https://supramar.es/" target="_blank"><img src="./images/supramar-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://elictem.com/" target="_blank"><img src="./images/elictem-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                 </div>
             </div>
