--- a/defaultsite.html
+++ b/defaultsite.html
@@ -11,6 +11,7 @@
 
         gtag('config', 'G-VFNW9DSY83');
     </script>
+    <img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361135&" width="1" height="1">
     <meta http-equiv="refresh" content="0; url=index" />
     <meta name="description" content="Califa Mountain Festival es un fin de semana de carreras por etapas en montaña, senderismo y actividades infantiles, charlas, ponencias, concierto">
     <meta name="keywords" content="trail, running, cxm, montaña, etapas, trailrunning">
