--- a/presentacion.html
+++ b/presentacion.html
@@ -11,6 +11,7 @@
 
         gtag('config', 'G-VFNW9DSY83');
     </script>
+    <img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361135&" width="1" height="1">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Presentación III Califa Mountain Festival: carreras por etapas en montaña, senderismo y actividades infantiles, charlas, ponencias, concierto">
@@ -165,7 +166,7 @@
                         <a href="https://fadmes.es/" target="_blank"><img src="./images/fadmes-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-3">
-                        <a href="https://www.juntadeandalucia.es/organismos/turismoculturaydeporte.html" target="_blank"><img src="./images/junta-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://andalusiancrush.org?utm_source=cdrunningseries&utm_medium=web&utm_campaign=patrociniocalifamountainfestival2024&utm_content=logotipoweb" target="_blank"><img src="./images/junta-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-3">
                         <a href="https://tdahcordoba.es/" target="_blank"><img src="./images/tdah-logo-blanco.png" style="width:100%; height: auto" /></a>
