--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361135&" width="1" height="1">
     <meta http-equiv="refresh" content="0; url=/presentacion" />
 
     <meta charset="UTF-8">
@@ -15,7 +16,7 @@
     <!-- Favicon -->
     <link rel="icon" href="assets/favicon.ico">
 
-     <!-- CSS FILES -->
+    <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;400;700&display=swap" rel="stylesheet">
