--- a/inscripciones.html
+++ b/inscripciones.html
@@ -11,6 +11,7 @@
 
         gtag('config', 'G-VFNW9DSY83');
     </script>
+    <img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361135&" width="1" height="1">
     <meta http-equiv="refresh" content="0; url=2024#inscripciones" />
     <meta charset="utf-8">
     <meta name="description" content="Califa Mountain Festival es un fin de semana de carreras por etapas en montaña, senderismo y actividades infantiles, charlas, ponencias, concierto">
