--- a/2024.html
+++ b/2024.html
@@ -613,7 +613,7 @@
                         <a href="https://fadmes.es/" target="_blank"><img src="./images/fadmes-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-3">
-                        <a href="https://andalusiancrush.org?utm_source=cdrunningseries&utm_medium=web&utm_campaign=patrociniocalifamountainfestival2024&utm_content=logotipoweb" target="_blank"><img src="./images/junta-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://andalusiancrush.org?utm_source=cdrunningseries&utm_medium=web&utm_campaign=patrociniocalifamountainfestival2024&utm_content=logotipoweb" target="_blank"><img src="./images/junta-logo-blanco.png" style="width:100%; height: auto" /><img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361136&" width="1" height="1"></a>
                     </div>
                     <div class="col-3">
                         <a href="https://tdahcordoba.es/" target="_blank"><img src="./images/tdah-logo-blanco.png" style="width:100%; height: auto" /></a>
