--- a/index.html
+++ b/index.html
@@ -165,11 +165,19 @@
         <section class="about-section section-padding yellow-dark-custom-bg" id="ediciones-anteriores">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-12">
+                    <div class="col-lg-6 col-12">
                         <div class="card margin-bottom-20px yellow-dark-custom-bg border-none">
                             <div class="card-body">
-                                <h5 class="card-title text-red-custom">Abrimos inscripciones</h5>
-                                <a href="2024" target="_blank"><img class="artists-image" src="2024/inscripciones.jpg" /></a>
+                                <h5 class="card-title text-red-custom">Inscripciones CxM abiertas</h5>
+                                <a href="2024#inscripciones" target="_blank"><img class="artists-image" src="2024/cartel.jpg" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-12">
+                        <div class="card margin-bottom-20px yellow-dark-custom-bg border-none">
+                            <div class="card-body">
+                                <h5 class="card-title text-red-custom">Inscripciones Senderismo abiertas</h5>
+                                <a href="2024#inscripciones" target="_blank"><img class="artists-image" src="2024/cartel-senderismo.jpg" /></a>
                             </div>
                         </div>
                     </div>
