--- a/contacto.html
+++ b/contacto.html
@@ -348,6 +348,9 @@
                         <a href="https://eosiberica.es/" target="_blank"><img src="./images/eosiberica-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
+                        <a href="https://fotoregalopersonalizado.es/" target="_blank"><img src="./images/fotoregalo-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
