--- a/2024.html
+++ b/2024.html
@@ -196,7 +196,7 @@
                                             <div class="">
                                                 <div>
                                                     <p class="text-white">Modalidad CxM Nocturna</p>
-                                                    <p class="text-white"><i class="bi bi-cursor"></i>12k</p>
+                                                    <p class="text-white"><i class="bi bi-cursor"></i>14k</p>
                                                     <p class="text-white"><i class="bi bi-triangle-half"></i> 700+ | 700-</p>
                                                     <p class="text-white"><i class="bi bi-calendar3"></i> Viernes 20 Sept. 2024</p>
                                                     <p class="text-white"><i class="bi bi-clock"></i> 20:00h</p>
@@ -217,11 +217,11 @@
                                             <div class="">
                                                 <div>
                                                     <p class="text-white">Modalidad CxM</p>
-                                                    <p class="text-white"><i class="bi bi-cursor"></i>25k</p>
+                                                    <p class="text-white"><i class="bi bi-cursor"></i>27k</p>
                                                     <p class="text-white"><i class="bi bi-triangle-half"></i> 1000+ | 1000-</p>
                                                     <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
                                                     <p class="text-white"><i class="bi bi-clock"></i> 8:30h</p>
-                                                    <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Albergue Provincial, Cerro Muriano (Córdoba)</p>
+                                                    <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Polideportivo Municipal, Cerro Muriano (Córdoba)</p>
                                                     <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: 18 años</p>
                                                 </div>
                                             </div>
@@ -263,7 +263,7 @@
                                                     <p class="text-white"><i class="bi bi-triangle-half"></i> 500+ | 500-</p>
                                                     <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
                                                     <p class="text-white"><i class="bi bi-clock"></i> 8:45h</p>
-                                                    <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Albergue Provincial, Cerro Muriano (Córdoba)</p>
+                                                    <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Polideportivo Municipal, Cerro Muriano (Córdoba)</p>
                                                     <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: 16 años (en caso de ser menores de 16 años tendrán que ir acompañados de un adulto bajo su responsabilidad)</p>
                                                 </div>
                                                 <a href="https://www.deporticket.com/web-formulario/26058-inscripcion-senderismo" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Inscríbete aquí</a>
@@ -305,7 +305,7 @@
                                                     <p class="text-white"><i class="bi bi-cursor"></i>Duración aprox. 1:30h</p>
                                                     <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
                                                     <p class="text-white"><i class="bi bi-clock"></i> 10:00h</p>
-                                                    <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Albergue Provincial, Cerro Muriano (Córdoba)</p>
+                                                    <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Polideportivo Municipal, Cerro Muriano (Córdoba)</p>
                                                     <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: sin edad mínima, se adaptarán las actividades</p>
                                                 </div>
                                             </div>
@@ -318,7 +318,7 @@
                                                     <p class="text-white"><i class="bi bi-cursor"></i>Duración aprox. 1:30h</p>
                                                     <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
                                                     <p class="text-white"><i class="bi bi-clock"></i> 11:30h</p>
-                                                    <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Albergue Provincial, Cerro Muriano (Córdoba)</p>
+                                                    <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Polideportivo Municipal, Cerro Muriano (Córdoba)</p>
                                                     <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: sin edad mínima, se adaptarán las actividades</p>
                                                 </div>
                                             </div>
