--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                             <p class="text-white"><i class="bi bi-triangle-half"></i> 1000+ | 1000-</p>
                                             <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
                                             <p class="text-white"><i class="bi bi-clock"></i> 8:30h</p>
-                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Albergue Provincial, Cerro Muriano (Córdoba)</p>
+                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Polideportivo Municipal, Cerro Muriano (Córdoba)</p>
                                             <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: 18 años</p>
                                         </div>
                                     </div>
@@ -405,11 +405,11 @@
                                     <div class="">
                                         <div>
                                             <p class="text-white">Senderismo No Competitivo</p>
-                                            <p class="text-white"><i class="bi bi-cursor"></i>10k</p>
-                                            <p class="text-white"><i class="bi bi-triangle-half"></i> 350+ | 350-</p>
+                                            <p class="text-white"><i class="bi bi-cursor"></i>14k</p>
+                                            <p class="text-white"><i class="bi bi-triangle-half"></i> 500+ | 500-</p>
                                             <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
                                             <p class="text-white"><i class="bi bi-clock"></i> 8:45h</p>
-                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Albergue Provincial, Cerro Muriano (Córdoba)</p>
+                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Polideportivo Municipal, Cerro Muriano (Córdoba)</p>
                                             <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: 16 años (en caso de ser menores de 16 años tendrán que ir acompañados de un adulto bajo su responsabilidad)</p>
                                         </div>
                                         <a href="https://www.deporticket.com/web-formulario/26058-inscripcion-senderismo" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Inscríbete aquí</a>
@@ -451,7 +451,7 @@
                                             <p class="text-white"><i class="bi bi-cursor"></i>Duración aprox. 1:30h</p>
                                             <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
                                             <p class="text-white"><i class="bi bi-clock"></i> 10:00h</p>
-                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Albergue Provincial, Cerro Muriano (Córdoba)</p>
+                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Polideportivo Municipal, Cerro Muriano (Córdoba)</p>
                                             <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: sin edad mínima, se adaptarán las actividades</p>
                                         </div>
                                     </div>
@@ -464,7 +464,7 @@
                                             <p class="text-white"><i class="bi bi-cursor"></i>Duración aprox. 1:30h</p>
                                             <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
                                             <p class="text-white"><i class="bi bi-clock"></i> 11:30h</p>
-                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Albergue Provincial, Cerro Muriano (Córdoba)</p>
+                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Polideportivo Municipal, Cerro Muriano (Córdoba)</p>
                                             <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: sin edad mínima, se adaptarán las actividades</p>
                                         </div>
                                     </div>
