--- a/presentacion.html
+++ b/presentacion.html
@@ -103,16 +103,31 @@
         <section class="about-section section-padding" id="invitacion">
             <div class="container">
                 <div class="row">
+                    <div class="col-lg-12 col-12">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <span class="text-yellow-dark-custom">
+                                    ❌ ¡ AFORO COMPLETO !
+                                    Os esperamos a los 200 asistentes el jueves 25 de Julio a las 21:00h en el acto de presentación oficial de III Califa Mountain Festival que tendrá lugar en El Invernadero del Mercado Victoria
+
+                                    IMPORTANTE
+                                    ⛔ Aforo restringido a las personas que han confirmado asistencia.
+                                    💳 Al hacer el checkin de entrada al evento podría solicitarse DNI para ACREDITAR IDENTIDAD y recibirán una pulsera de Mercado Victoria con la que tendrán descuento en Copas🍸
+                                    ⌛ Se aconseja hacer el checkin de entrada con antelación de tiempo de 30 minutos
+
+                                    #HazteCalifa
+
+                                    #CalifaMountainFestival #TrailRunning #Carreras #Montaña #Deporte
+                                </span>
+                            </div>
+                        </div>
+                    </div>
                     <!-- DESCRIPCION -->
                     <div class="col-lg-12 col-12">
                         <div class="card margin-bottom-20px blue-custom-bg border-none">
                             <div class="card-body">
-                                <a href="2024/invitacion-2024-publico.png" target="_blank"><img src="2024/invitacion-2024-publico.png" style="width:100%; height: auto" /></a>
+                                <a><img src="2024/presentacion-completo.png" style="width:100%; height: auto" /></a>
                             </div>
-                        </div>
-
-                        <div class="col-lg-12 col-12 mb-4 mb-lg-0 d-flex align-items-center">
-                            <iframe style="min-height: 3000px !important;" src="https://docs.google.com/forms/d/e/1FAIpQLSfYN7c4vzUiwFsa791p64RQ93jgS3MfsvkR8ZxZBh7rJ0aE0w/viewform?embedded=true" width="100%" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
                         </div>
                     </div>
                 </div>
