--- a/presentacion-oficial-2024.html
+++ b/presentacion-oficial-2024.html
@@ -14,13 +14,13 @@
     <img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361135&" width="1" height="1">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Blog Califa Mountain Festival fin de semana de carreras por etapas en montaña, senderismo y actividades infantiles, charlas, ponencias, concierto">
-    <meta name="keywords" content="trail, running, cxm, montaña, etapas, trailrunning, blog">
+    <meta name="description" content="Presentación III Califa Mountain Festival: carreras por etapas en montaña, senderismo y actividades infantiles, charlas, ponencias, concierto">
+    <meta name="keywords" content="trail, running, cxm, montaña, etapas, trailrunning">
     <meta name="author" content="Califa Mountain Festival - CD Running Series">
     <meta name="copyright" content="Califa Mountain Festival - CD Running Series">
     <meta name="robots" content="index, follow" />
 
-    <title>Califa Mountain Festival</title>
+    <title>Presentación III Califa Mountain Festival 2024</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -78,7 +78,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="index">Edición 2024</a>
+                            <a class="nav-link click-scroll text-yellow-dark-custom" href="2024">Edición 2024</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="2023">Edición 2023</a>
@@ -90,7 +90,7 @@
                             <a class="nav-link click-scroll" href="contacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link click-scroll text-yellow-dark-custom" href="blog">Blog</a>
+                            <a class="nav-link click-scroll" href="blog">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="index">Inicio</a>
@@ -100,63 +100,159 @@
             </div>
         </nav>
 
-        <section class="about-section section-padding" id="prensentacion-oficial">
+        <section class="about-section section-padding" id="invitacion">
             <div class="container">
                 <div class="row">
+                    <div class="card-body">
+                        <span class="text-yellow-dark-custom">
+                            _
+                        </span>
+                    </div>
                     <div class="col-lg-12 col-12">
-                        <div class="card margin-bottom-20px red-custom-bg border-none">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
                             <div class="card-body">
-                                <div class="row">
-                                    <div class="col-lg-6 col-12 mb-4 mb-lg-0 d-flex align-items-center">
-                                        <div class="services-info">
-                                            <h2 class="text-white mb-4">Presentación III Califa Mountain Festival</h2>
-                                            <h6 class="text-yellow-dark-custom mt-4">Éxito de convocatoria: 200 asistentes</h6>
+                                <span class="text-yellow-dark-custom">
+                                    Con fecha 25 de julio de 2024 se ha celebrado la presentación oficial del III Califa Mountain Festival en el Mercado Victoria.
+                                </span>
+                            </div>
+                            <div class="card-body">
+                                <span class="text-yellow-dark-custom">
+                                    El III Califa Mountain Festival, Campeonato de Andalucía de CxM por Etapas de la FADMES (Federación de Deportes de Montaña, Escalada y Senderismo) y Primer Encuentro Interprovincial de Senderismo de Andalucía, se celebrará los días 20-21-22 de septiembre de 2024 en Cerro Muriano (Cordoba) y contará en la etapa 2 con el Trofeo UCO de CxM por la Universidad de Córdoba,  UCODeporte.
+                                </span>
+                            </div>
+                            <div class="card-body">
+                                <span class="text-yellow-dark-custom">
+                                    La presentación que ha sido un éxito de convocatoria, con más de 200 asistentes contó con la participación de autoridades relevantes de Córdoba y donde tras la presentación inicial participaron D. Félix Romero Carrillo, vicepresidente 3 de Diputación de Córdoba. D. Sebastián del Rey, gerente del Instituto Municipal de Deportes de Córdoba IMDECO, Da. Marta Domínguez Escribano, directora de Deportes de la Universidad de Cordoba, Da. Ornela Sara París Checa, delegada Federación Andaluza de Deportes de Montaña, Escalada y Senderismo y Da. Ana García Sánchez, directora de Marketing de SPG.
 
-                                            <p class="text-white">
-                                                Con fecha 25 de julio de 2024 se ha celebrado la presentación oficial del III Califa Mountain Festival en el Mercado Victoria.
-                                            </p>
-                                            <a href="presentacion-oficial-2024" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-light-custom-bg text-blue-custom">Leer más</a>
-                                        </div>
+                                    El equipo directivo de Califa Mountain Festival, Daniel Rodríguez y Francisco Gil presentaron a los asistentes los datos técnicos de las actividades deportivas que han preparado para la prueba y los patrocinadores de esta III Edición Califa Mountain Festival.
+
+                                </span>
+                            </div>
+
+                            <div class="card-body">
+                                <span class="text-yellow-dark-custom">
+                                    Califa Mountain Festival tendrá lugar del 20 al 22 de septiembre 2024 en Cerro Muriano, Córdoba.
+                                </span>
+                            </div>
+                            <div class="card-body">
+                                <span class="text-yellow-dark-custom">
+                                    Toda la información e inscripciones en web y en redes sociales
+
+                                    <div class="container">
+                                        <ul class="social-icon">
+                                            <li class="social-icon-item">
+                                                <a href="https://www.facebook.com/profile.php?id=100078855293096" target="_blank" class="social-icon-link">
+                                                    <span class="bi-facebook"></span>
+                                                </a>
+                                            </li>
+
+                                            <li class="social-icon-item">
+                                                <a href="https://www.instagram.com/califa_mountain_festival" target="_blank" class="social-icon-link">
+                                                    <span class="bi-instagram"></span>
+                                                </a>
+                                            </li>
+
+                                            <li class="social-icon-item">
+                                                <a href="https://www.youtube.com/@runningseries" target="_blank" class="social-icon-link">
+                                                    <span class="bi-youtube"></span>
+                                                </a>
+                                            </li>
+                                        </ul>
                                     </div>
 
-                                    <div class="col-lg-6 col-12">
-                                        <div class="about-text-wrap">
-                                            <img src="images/foto-oficial-presentacion-2024.jpg" class="about-image img-fluid">
-                                        </div>
-                                    </div>
-                                </div>
+                                </span>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="about-section section-padding" id="cordoba-la-llana">
-            <div class="container">
-                <div class="row">
+                    <!-- DESCRIPCION -->
                     <div class="col-lg-12 col-12">
-                        <div class="card margin-bottom-20px red-custom-bg border-none">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
                             <div class="card-body">
-                                <div class="row">
-                                    <div class="col-lg-6 col-12 mb-4 mb-lg-0 d-flex align-items-center">
-                                        <div class="services-info">
-                                            <h2 class="text-white mb-4">Córdoba "La llana"</h2>
-                                            <h6 class="text-yellow-dark-custom mt-4">Córdoba Alyana: del árabe "El Paraíso"</h6>
-
-                                            <p class="text-white">
-                                                ¿ Has escuchado el tópico Córdoba la llana ? En Califa Mountain Festival no sólo te ofrecemos 3 Etapas para desmentirlo, si no que además queremos comentaros el origen.
-                                            </p>
-                                            <a href="cordoba-la-llana" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-light-custom-bg text-blue-custom">Leer más</a>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-6 col-12">
-                                        <div class="about-text-wrap">
-                                            <img src="images/cordobaalyana.jpg" class="about-image img-fluid">
-                                        </div>
-                                    </div>
-                                </div>
+                                <a><img src="images/foto-oficial-presentacion-2024.jpg" style="width:100%; height: auto" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a><img src="images/foto-presentacion-califamountainfestival-dani.jpg" style="width:100%; height: auto" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a><img src="images/foto-presentacion-califamountainfestival-ucodeporte.jpg" style="width:100%; height: auto" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a><img src="images/foto-presentacion-califamountainfestival-fadmes.jpg" style="width:100%; height: auto" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a><img src="images/foto-presentacion-califamountainfestival-imdeco.jpg" style="width:100%; height: auto" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a><img src="images/foto-presentacion-califamountainfestival-diputacion-cordoba.jpg" style="width:100%; height: auto" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a><img src="images/foto-presentacion-califamountainfestival-spg.jpg" style="width:100%; height: auto" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a><img src="images/foto-presentacion-califamountainfestival-francis.jpg" style="width:100%; height: auto" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a><img src="images/foto-presentacion-califamountainfestival-directiva.jpg" style="width:100%; height: auto" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a><img src="images/foto-presentacion-califamountainfestival-totem.jpg" style="width:100%; height: auto" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a><img src="images/foto-presentacion-califamountainfestival-vale-mercado.jpg" style="width:100%; height: auto" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a><img src="images/foto-presentacion-califamountainfestival-asistentes1.jpg" style="width:100%; height: auto" /></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-6">
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body">
+                                <a><img src="images/foto-presentacion-califamountainfestival-asistentes2.jpg" style="width:100%; height: auto" /></a>
                             </div>
                         </div>
                     </div>
